# crewAI

./: BLACKBOARD_INTEGRATION.md  PROMPT_CREWAI_LADYBUG_INTEGRATION.md  PROMPT_LADYBUG_EXPANSION.md
docker/ladybug-rs/: Dockerfile.vendor  docker-compose.vendor.yml
lib/crewai-rust/: Cargo.toml
lib/crewai-rust/docs/concepts/: events.md  knowledge.md  llms.md  mcp.md  memory.md
lib/crewai-rust/docs/guides/: agent-card-spec.md
lib/crewai-rust/src/a2a/auth/: mod.rs
lib/crewai-rust/src/blackboard/: cache.rs  entry.rs  hashed.rs  lance.rs  mod.rs  original.rs  snapshot.rs  store.rs
lib/crewai-rust/src/mcp/transports/: mod.rs
lib/crewai-rust/src/telemetry/: mod.rs
lib/crewai-tools-rust/: Cargo.toml
lib/crewai-tools-rust/src/: lib.rs
lib/crewai-tools-rust/src/adapters/: mod.rs
lib/crewai-tools-rust/src/rag/: mod.rs
lib/crewai-tools-rust/src/rag/chunkers/: mod.rs
lib/crewai-tools-rust/src/rag/core/: mod.rs
lib/crewai-tools-rust/src/rag/loaders/: mod.rs
lib/crewai-tools-rust/src/tools/: mod.rs
lib/crewai-tools-rust/src/tools/ai_ml/: mod.rs
lib/crewai-tools-rust/src/tools/automation/: mod.rs
lib/crewai-tools-rust/src/tools/browser/: mod.rs
lib/crewai-tools-rust/src/tools/cloud_storage/: mod.rs
lib/crewai-tools-rust/src/tools/database/: mod.rs
lib/crewai-tools-rust/src/tools/file_ops/: mod.rs
lib/crewai-tools-rust/src/tools/search/: mod.rs
lib/crewai-tools-rust/src/tools/web_scraping/: mod.rs
