[package]
name = "crewai-tools"
version = "1.9.3"
edition = "2021"
description = "Specialized tool integrations for crewAI-rust"

[dependencies]
crewai = { path = "../crewai-rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
log = "0.4"
anyhow = "1"
thiserror = "2"

[features]
default = ["search", "file_ops"]
search = ["reqwest"]
web_scraping = ["reqwest"]
database = []
file_ops = []
ai_ml = ["reqwest"]
automation = ["reqwest"]
cloud_storage = ["reqwest"]
browser = ["reqwest"]
rag = []
all = ["search", "web_scraping", "database", "file_ops", "ai_ml", "automation", "cloud_storage", "browser", "rag"]
